--- a/content/sitemap.njk
+++ b/content/sitemap.njk
@@ -9,7 +9,7 @@ title: Site Map
 <div class="reading-width">
   <h1>Site Map</h1>
   <p>All of the folders, collections and posts on this wee website.</p>
-  <button class="mb-2" id="toggleFolders">Open all folders</button>
+  <button class="ghost mb-2" id="toggleFolders">Open all folders</button>
 
 {{ sitemap.renderTree(collections.structuredPages) }}
 </div>
