🎬 Update media.njk

--- a/content/curios/media.njk
+++ b/content/curios/media.njk
@@ -26,13 +26,25 @@ date: 2025-04-30
   "title": "The Witch",
   "notes": "It's giving Lord of the Flies x Witch Hunts",
   "date": "2025-03",
-  "type": "Movie"
+  "type": "Film"
   },{
   "title": "Good Bye, Lenin!",
   "notes": "<a href='https://www.theguardian.com/travel/2016/jul/10/spreewald-gherkins-brandenburg-germany'>Spreewaldgurken!</a>",
   "date": "2025-04",
   "type": "TV Show"
-  }
+  },{
+  "title": "The Amatuer",
+  "notes": "Rami Malek is so good at morally gray characters.",
+  "date": "2025-05-03",
+  "type": "Film"
+  },{
+  "title": "Conclave",
+  "notes": "The process of picking a new Pope. Apt.",
+  "date": "2025-05-05",
+  "type": "Film"
+  },
+  
+  
 ] %}
 
   <table class="table sortable" aria-describedby="sort-status">
