📃 Update index.njk

--- a/content/index.njk
+++ b/content/index.njk
@@ -123,9 +123,9 @@ scripts: '
 					</small>
 				</li>
 				<li>
-					<a href="https://app.thestorygraph.com/books/00813a4b-aefd-4887-a548-20901aae5c0d" class="hidden">Moon Spells</a>
+					<a href="https://app.thestorygraph.com/books/d9c7ed04-6148-4e01-a118-d96cba16f507" class="hidden">The Midnight Library</a>
 					<small class="d-b subtext">
-						Diane Ahlquist
+						Matt Haig
 					</small>
 				</li>
 				<li>
