📝 Add blog post

--- a/assets/css/abstracts/_variables.css
+++ b/assets/css/abstracts/_variables.css
@@ -30,7 +30,7 @@
   --link: DeepPink;
   --linkaccent: hsl(328, 100%, 19%);
   --linkhover: SpringGreen;
-  --linkvisited: hsl(340, 100%, 67%);
+  --linkvisited: Violet;
   --text: LavenderBlush;
   --subtext: PeachPuff;
   --marker: "⭐";
