💬 Add URL to h-card

--- a/structure/global/footer.njk
+++ b/structure/global/footer.njk
@@ -16,6 +16,7 @@
                 </nav>
                 <div class="h-card vcard">
                     <img class="u-photo" src="{{metadata.avatar}}" alt="">
+                    <a class="d-n u-url u-uid" href="https://frills.dev">https://frills.dev</a>
 
                     <div class="reading-width">
                         <p class="p-note mb-0">
